[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/NPC/GhostBill/GhostBill.gd" type="Script" id=1]
[ext_resource path="res://scene/NPC/GhostBill/InteractAreaBill.gd" type="Script" id=2]
[ext_resource path="res://art/project-art/png/HUD/ImanorBalloonx2.png" type="Texture" id=3]
[ext_resource path="res://GUI/DialogBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PredefinedNPC" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="InteractArea" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )

[node name="HasQuest" type="Sprite" parent="InteractArea" index="0"]

visible = false
position = Vector2( 21, -52 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 226, 64.5, 31, 31.75 )
_sections_unfolded = [ "Region" ]

[node name="NoHasQuest" type="Sprite" parent="InteractArea" index="1"]

visible = false
position = Vector2( 21, -52 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 226.25, 31.75, 32, 32 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="TextBox" parent="InteractArea" index="2" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" index="3"]

position = Vector2( -35.778, 5.28913 )
scale = Vector2( 6.18769, 4.83925 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="InteractArea" index="4"]

position = Vector2( 0, 4.2352 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="InteractArea" to="InteractArea" method="_on_InteractArea_body_entered"]

[connection signal="body_exited" from="InteractArea" to="InteractArea" method="_on_InteractArea_body_exited"]

[connection signal="finished_dialog" from="InteractArea/TextBox" to="InteractArea" method="_on_TextBox_finished_dialog"]

[connection signal="animation_finished" from="InteractArea/AnimatedSprite" to="InteractArea" method="_on_AnimatedSprite_animation_finished"]


